add typescript to the project, create interface to create a better abstraction and implement AuthenticationControllable interface for authentication controller

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Ignore environment files
 backend/.env
 frontend/.env
+backend/dist
+/dist
 
 # Ignore node_modules directories
 backend/node_modules/
