Actualizar .env.sample

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,8 +1,8 @@
 PORT=5001
 
 MONGO_ATLAS_DB_NAME=streamchatapp_db
-MONGO_ATLAS_PWD=
-MONGO_ATLAS_URI
+MONGO_ATLAS_PWD=UNKNOWN
+MONGO_ATLAS_URI=UNKNOWN
 
 STEAM_API_KEY=LOOK_PASS_IN_MONGO_CLOUD
 STEAM_API_SECRET=LOOK_PASS_IN_MONGO_CLOUD
